--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark black-background">
-		  <a class=" white-text" href="#">JEEP®</a>
-		  <a href="#" class="white-text">VEHICLES<i class="fas fa-angle-down"></i></a>
+		  <a class=" white-text" href="#">Jeep®</a>
+		  <a href="#" class="white-text">VEHICLES<i class="fas fa-angle-down left-space"></i></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  	<span class="white-text">MENU</span>
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
-
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">BUILD & PRICE <i class="fas fa-angle-down"></i><span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="#">BUILD & PRICE <i class="fas fa-angle-down left-space"></i><span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">FIND A DEALER<i class="fas fa-angle-down"></i></a>
@@ -40,7 +40,28 @@
 		    </ul>
 		  </div>
 		</nav>
-
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+	  <div class="carousel-inner" role="listbox">
+	    <div class="carousel-item active">
+	      <img class="d-block w-100" src="first-slide-mobile.jpg" data-src="holder.js/900x400?theme=social" alt="First slide">
+	    </div>
+	    <div class="carousel-item">
+	      <img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
+	    </div><div class="carousel-item">
+	      <img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
+	    </div><div class="carousel-item">
+	      <img class="d-block w-100" src="fourth-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Fourth slide">
+	    </div>
+	  </div>
+	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
 
 	</body>
 </html>
