--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 		</nav>
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner" role="listbox">
-	    <div class="carousel-item active">
-	      <img class="d-block w-100" src="first-slide-mobile.jpg" data-src="holder.js/900x400?theme=social" alt="First slide">
+	    <div class="carousel-item active slide-one">
 	    </div>
-	    <div class="carousel-item">
+	    <div class="carousel-item slide-two">
 	      <img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
 	    </div><div class="carousel-item">
 	      <img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
