have orange and grey background for menu list

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Jeep-com-with-bs</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -11,31 +11,52 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark black-background">
-		  <a class=" white-text" href="#">Jeep®</a>
-		  <a href="#" class="white-text">VEHICLES<i class="fas fa-angle-down left-space"></i></a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		  	<span class="white-text">MENU</span>
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
+		<nav class="navbar navbar-expand-lg black-background flex-display">
+		  <a class="white-text" href="#">Jeep®</a>
+		  <!-- <button class="navbar-toggler white-text flex-end" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">VEHICLES<i class="fas fa-angle-down left-space"></i>
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">BUILD & PRICE <i class="fas fa-angle-down left-space"></i><span class="sr-only">(current)</span></a>
+		        STANDARD VEHICLES</i><span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">FIND A DEALER<i class="fas fa-angle-down"></i></a>
+		        <a class="nav-link" href="#"><img src="wrangler.jpg"/><i class="fas fa-angle-right left-space orange-color"></i></i></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#">SHOPPING TOOLS<i class="fas fa-angle-down"></i></a>
+		        <a class="nav-link disabled" href="#">SHOPPING TOOLS<i class="fas fa-angle-right left-space orange-color"></i></a>
 		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">CAPABILITY<i class="fas fa-angle-down"></i></a>
+		        <a class="nav-link disabled" href="#">CAPABILITY<i class="fas fa-angle-right left-space orange-color"></i></a>
 		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">JEEP LIFE<i class="fas fa-angle-down"></i></a>
+		        <a class="nav-link disabled" href="#">JEEP LIFE<i class="fas fa-angle-right orange-color"></i></a>
 		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">OWNERS<i class="fas fa-angle-down"></i></a>
+		        <a class="nav-link disabled" href="#">OWNERS<i class="fas fa-angle-right left-space orange-color"></i></a>
 		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">MERCHANDISE<i class="fas fa-angle-down"></i></a>
+		        <a class="nav-link disabled" href="#">MERCHANDISE<i class="fas fa-angle-right left-space orange-color"></i></a>
+		      </li>
+		    </ul>
+		  </div> -->
+		  <button class="navbar-toggler flex-display flex-center" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  	<span class="white-text font-12px" style="padding-right: 5px;">MENU</span>
+		    <i class="fas fa-bars white-text"></i>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    <ul class="navbar-nav mr-auto" style="padding: 10px;">
+		      <li class="nav-item active orange-box">
+		        <a class="nav-link black-text" href="#">BUILD & PRICE <i class="fas fa-angle-down left-space"></i><span class="sr-only">(current)</span></a>
+		      </li>
+		      <li class="nav-item grey-box">
+		        <a class="nav-link white-text" href="#">FIND A DEALER<i class="fas fa-angle-down"></i></a>
+		      </li>
+		      <li class="nav-item">
+		        <a class="nav-link black-text" href="#">SHOPPING TOOLS<i class="fas fa-angle-down"></i></a>
+		      </li><li class="nav-item">
+		        <a class="nav-link black-text" href="#">CAPABILITY<i class="fas fa-angle-down"></i></a>
+		      </li><li class="nav-item">
+		        <a class="nav-link black-text" href="#">JEEP® LIFE<i class="fas fa-angle-down"></i></a>
+		      </li><li class="nav-item">
+		        <a class="nav-link black-text" href="#">OWNERS<i class="fas fa-angle-down"></i></a>
+		      </li><li class="nav-item">
+		        <a class="nav-link black-text" href="#">MERCHANDISE<i class="fas fa-angle-down"></i></a>
 		      </li>
 		    </ul>
 		  </div>
