add jeep vehicle images

--- a/index.html
+++ b/index.html
@@ -12,54 +12,73 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg black-background flex-display">
-		  <a class="white-text" href="#">Jeep®</a>
-		  <!-- <button class="navbar-toggler white-text flex-end" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">VEHICLES<i class="fas fa-angle-down left-space"></i>
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		      <li class="nav-item active">
-		        STANDARD VEHICLES</i><span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#"><img src="wrangler.jpg"/><i class="fas fa-angle-right left-space orange-color"></i></i></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#">SHOPPING TOOLS<i class="fas fa-angle-right left-space orange-color"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">CAPABILITY<i class="fas fa-angle-right left-space orange-color"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">JEEP LIFE<i class="fas fa-angle-right orange-color"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">OWNERS<i class="fas fa-angle-right left-space orange-color"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link disabled" href="#">MERCHANDISE<i class="fas fa-angle-right left-space orange-color"></i></a>
-		      </li>
-		    </ul>
-		  </div> -->
-		  <button class="navbar-toggler flex-display flex-center" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		  	<span class="white-text font-12px" style="padding-right: 5px;">MENU</span>
-		    <i class="fas fa-bars white-text"></i>
-		  </button>
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto" style="padding: 10px;">
-		      <li class="nav-item active orange-box">
-		        <a class="nav-link black-text" href="#">BUILD & PRICE <i class="fas fa-angle-down left-space"></i><span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item grey-box">
-		        <a class="nav-link white-text" href="#">FIND A DEALER<i class="fas fa-angle-down"></i></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link black-text" href="#">SHOPPING TOOLS<i class="fas fa-angle-down"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link black-text" href="#">CAPABILITY<i class="fas fa-angle-down"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link black-text" href="#">JEEP® LIFE<i class="fas fa-angle-down"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link black-text" href="#">OWNERS<i class="fas fa-angle-down"></i></a>
-		      </li><li class="nav-item">
-		        <a class="nav-link black-text" href="#">MERCHANDISE<i class="fas fa-angle-down"></i></a>
-		      </li>
-		    </ul>
-		  </div>
+			<a class="white-text" href="#">Jeep®</a>
+			<button class="navbar-toggler white-text flex-end" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">VEHICLES<i class="fas fa-angle-down left-space"></i>
+				</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			    <ul class="navbar-nav mr-auto">
+			    	<li class="nav-item active">
+			        STANDARD VEHICLES</i><span class="sr-only">(current)</span></a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" href="#"><img src="wrangler.jpg"/><i class="fas fa-angle-right left-space orange-color"></i></i></a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link disabled" href="#">SHOPPING TOOLS<i class="fas fa-angle-right left-space orange-color"></i></a>
+			      </li><li class="nav-item">
+			        <a class="nav-link disabled" href="#">CAPABILITY<i class="fas fa-angle-right left-space orange-color"></i></a>
+			      </li><li class="nav-item">
+			        <a class="nav-link disabled" href="#">JEEP LIFE<i class="fas fa-angle-right orange-color"></i></a>
+			      </li><li class="nav-item">
+			        <a class="nav-link disabled" href="#">OWNERS<i class="fas fa-angle-right left-space orange-color"></i></a>
+			      </li><li class="nav-item">
+			        <a class="nav-link disabled" href="#">MERCHANDISE<i class="fas fa-angle-right left-space orange-color"></i></a>
+			      </li>
+			    </ul>
+			</div>
+			<button class="navbar-toggler flex-display flex-center" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  	<span class="white-text font-12px" style="padding-right: 5px;">MENU</span>
+			    <i class="fas fa-bars white-text"></i>
+		  	</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		    	<ul class="navbar-nav mr-auto" style="padding: 10px;">
+		      		<a class=" black-text" href="#">
+				      	<li class="nav-item active orange-box">
+				        BUILD & PRICE <i class="fas fa-angle-right left-space"></i><span class="sr-only">(current)</span>
+				    	</li>
+		      		</a>
+				    <a class="white-text" href="#">
+				    	<li class="nav-item grey-box">
+				        	FIND A DEALER<i class="fas fa-angle-right"></i>
+				    	</li>
+					</a>
+					<a class="black-text" href="#">
+					    <li class="nav-item">
+					        SHOPPING TOOLS<i class="fas fa-angle-down"></i>
+					    </li>
+					</a>
+					<a class="nav-link black-text" href="#">
+						<li class="nav-item">
+		        			CAPABILITY<i class="fas fa-angle-down"></i>
+		      			</li>
+		      		</a>
+		      		<a class="nav-link black-text" href="#">
+		      			<li class="nav-item">
+		        			JEEP® LIFE<i class="fas fa-angle-right"></i>
+		      			</li>
+		      		</a>
+		      		<a class="nav-link black-text" href="#">
+		      			<li class="nav-item">
+		        			OWNERS<i class="fas fa-angle-down"></i>
+		      			</li>
+		      		</a>
+		      		<a class="nav-link black-text" href="#">
+		      			<li class="nav-item">
+		        			MERCHANDISE<i class="fas fa-angle-right"></i>
+		      			</li>
+		      		</a>
+		    	</ul>
+		  	</div>
 		</nav>
 	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 	  <div class="carousel-inner" role="listbox">
@@ -81,6 +100,43 @@
 	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
 	    <span class="sr-only">Next</span>
 	  </a>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12 text-center">
+				<h3>JEEP® VEHICLES</h3>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid d-flex flex-wrap">
+			<a href="#">
+				<div class="card flex-fill text-center black-text">
+					<img class="card-img-top" src="wrangler.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h6 class="card-title">ALL-NEW WRANGLER</h6>
+						<p class="card-text msrp">
+			    		MSRP* STARTING AT
+			    		</p>
+			    		<p class="price"> $27,945
+						</p>
+					</div>
+				</div>
+			</a>
+			<a href="#">
+				<div class="card flex-fill text-center black-text">
+					<img class="card-img-top" src="wrangler.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h6 class="card-title">ALL-NEW WRANGLER</h6>
+						<p class="card-text msrp">
+			    		MSRP* STARTING AT
+			    		</p>
+			    		<p class="price"> $27,945
+						</p>
+					</div>
+				</div>
+			</a>
+		</div>
+	
 	</div>
 
 	</body>
