added jeep vehicle images below carousel

--- a/index.html
+++ b/index.html
@@ -80,64 +80,109 @@
 		    	</ul>
 		  	</div>
 		</nav>
-	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	  <div class="carousel-inner" role="listbox">
-	    <div class="carousel-item active slide-one">
-	    </div>
-	    <div class="carousel-item slide-two">
-	      <img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
-	    </div><div class="carousel-item">
-	      <img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
-	    </div><div class="carousel-item">
-	      <img class="d-block w-100" src="fourth-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Fourth slide">
-	    </div>
-	  </div>
-	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	</div>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-12 text-center">
-				<h3>JEEP® VEHICLES</h3>
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner" role="listbox">
+				<div class="carousel-item active slide-one">
+				</div>
+				<div class="carousel-item slide-two">
+					<img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
+				</div><div class="carousel-item">
+					<img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
+				</div><div class="carousel-item">
+					<img class="d-block w-100" src="fourth-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Fourth slide">
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-12 text-center">
+					<h6><b>JEEP® VEHICLES</b></h6>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="container-fluid d-flex flex-wrap">
-			<a href="#">
-				<div class="card flex-fill text-center black-text">
-					<img class="card-img-top" src="wrangler.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h6 class="card-title">ALL-NEW WRANGLER</h6>
-						<p class="card-text msrp">
-			    		MSRP* STARTING AT
-			    		</p>
-			    		<p class="price"> $27,945
-						</p>
-					</div>
-				</div>
-			</a>
-			<a href="#">
-				<div class="card flex-fill text-center black-text">
-					<img class="card-img-top" src="wrangler.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h6 class="card-title">ALL-NEW WRANGLER</h6>
-						<p class="card-text msrp">
-			    		MSRP* STARTING AT
-			    		</p>
-			    		<p class="price"> $27,945
-						</p>
-					</div>
-				</div>
-			</a>
+		<div class="container-fluid d-flex flex-wrap">
+				<a href="#" class="card card-images flex-fill text-center black-text">
+						<img class="card-img-top" src="wrangler.300.jpg" alt="Wrangler">
+						<div class="card-body">
+							<h6 class="card-title">ALL-NEW WRANGLER</h6>
+							<p class="card-text msrp">
+								MSRP* STARTING AT
+								</p>
+								<p class="price"> $27,945
+							</p>
+						</div>
+				</a>
+				<a href="#" class="card card-images flex-fill text-center black-text">
+						<img class="card-img-top" src="grandcherokee.300.jpg" alt="Grand Cherokee">
+						<div class="card-body">
+							<h6 class="card-title">GRAND CHEROKEE</h6>
+							<p class="card-text msrp">
+								MSRP* STARTING AT
+								</p>
+								<p class="price"> $31,945
+							</p>
+						</div>
+				</a>
+				<a href="#" class="card card-images flex-fill text-center black-text">
+						<img class="card-img-top" src="cherokee.300.jpg" alt="Cherokee">
+						<div class="card-body">
+							<h6 class="card-title">CHEROKEE</h6>
+							<p class="card-text msrp">
+								MSRP* STARTING AT
+								</p>
+								<p class="price"> $25,240
+							</p>
+						</div>
+				</a>
+				<a href="#" class="card card-images flex-fill text-center black-text">
+						<img class="card-img-top" src="compass.300.jpg" alt="Compass">
+						<div class="card-body">
+							<h6 class="card-title">COMPASS</h6>
+							<p class="card-text msrp">
+								MSRP* STARTING AT
+								</p>
+								<p class="price"> $21,845
+							</p>
+						</div>
+				</a>
+				<a href="#" class="card card-images flex-fill text-center black-text">
+						<img class="card-img-top" src="renegade.300.jpg" alt="Renegade">
+						<div class="card-body">
+							<h6 class="card-title">ALL-NEW WRANGLER</h6>
+							<p class="card-text msrp">
+								MSRP* STARTING AT
+								</p>
+								<p class="price"> $27,945
+							</p>
+						</div>
+				</a>
+				<a href="#" class="card card-images flex-fill text-center black-text">
+						<img class="card-img-top" src="gladiator.300.jpg" alt="All-New Gladiator">
+						<div class="card-body">
+							<h6 class="card-title">ALL-NEW GLADIATOR COMING SPRING 2019</h6>
+						</div>
+				</a>
 		</div>
-	
-	</div>
-
+		<div class="grey-box">
+			<div class="container-fluid d-flex flex-wrap">
+				<a href="#" class="card flex-fill text-center black-text">
+						<img class="last-images" src="compass.1000.jpg" alt="Jeep Compass Latitude">
+						<div class="card-body">
+							<h6 class="card-title">2019 JEEP® COMPASS LATITUDE</h6>
+							<p class="card-text">
+								Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
+							</p>
+						</div>
+				</a>
+			</div>
+		</div>
 	</body>
-</html>
+	</html>
