--- a/index.html
+++ b/index.html
@@ -171,17 +171,42 @@
 						</div>
 				</a>
 		</div>
-		<div class="grey-box">
+		<div class="light-grey-box">
 			<div class="container-fluid d-flex flex-wrap">
-				<a href="#" class="card flex-fill text-center black-text">
+				<a href="#" class="card flex-fill" style="margin-bottom: 20px;">
 						<img class="last-images" src="compass.1000.jpg" alt="Jeep Compass Latitude">
-						<div class="card-body">
+						<div class="card-body black-background white-text">
 							<h6 class="card-title">2019 JEEP® COMPASS LATITUDE</h6>
-							<p class="card-text">
-								Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
-							</p>
+							<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
+							</h6>
+						</div>
+						<div class="dark-grey-box white-text text-right">
+							EXPLORE THE 2019 JEEP® COMPASS <i class="fas fa-angle-right orange-color left-space"></i>
 						</div>
 				</a>
+				<a href="#" class="card flex-fill" style="margin-bottom:20px;">
+					<img class="last-images" src="grandcherokee.1000.jpg" alt="Grand Cherokee Laredo" />
+					<div class="card-body black-background white-text">
+						<h6 class="card-title">2019 JEEP® GRAND CHEROKEE LAREDO</h6>
+						<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
+						</h6>
+					</div>
+					<div class="dark-grey-box white-text text-right">
+						DISCOVER THE 2019 JEEP® GRAND CHEROKEE <i class="fas fa-angle-right orange-color left-space"></i>
+					</div>
+				</a>
+				<a href="#" class="card flex-fill" style="margin-bottom:20px;">
+					<img class="last-images" src="cherokee.1000.jpg" alt="Cherokee Latitude Plus" />
+					<div class="card-body black-background white-text">
+						<h6 class="card-title">2019 JEEP® CHEROKEE LATITUDE PLUS</h6>
+						<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
+						</h6>
+					</div>
+					<div class="dark-grey-box white-text text-right">
+						DISCOVER THE 2019 JEEP® CHEROKEE <i class="fas fa-angle-right orange-color left-space"></i>
+					</div>
+				</a>
+			
 			</div>
 		</div>
 	</body>
