--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 							</h6>
 						</div>
 						<div class="dark-grey-box white-text text-right">
-							EXPLORE THE 2019 JEEP® COMPASS <i class="fas fa-angle-right orange-color left-space"></i>
+							EXPLORE THE 2019 JEEP® COMPASS <i class="fas fa-angle-right orange-color left-space right-space"></i>
 						</div>
 				</a>
 				<a href="#" class="card flex-fill" style="margin-bottom:20px;">
@@ -192,7 +192,7 @@
 						</h6>
 					</div>
 					<div class="dark-grey-box white-text text-right">
-						DISCOVER THE 2019 JEEP® GRAND CHEROKEE <i class="fas fa-angle-right orange-color left-space"></i>
+						DISCOVER THE 2019 JEEP® GRAND CHEROKEE <i class="fas fa-angle-right orange-color left-space right-space"></i>
 					</div>
 				</a>
 				<a href="#" class="card flex-fill" style="margin-bottom:20px;">
@@ -202,12 +202,29 @@
 						<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
 						</h6>
 					</div>
-					<div class="dark-grey-box white-text text-right">
-						DISCOVER THE 2019 JEEP® CHEROKEE <i class="fas fa-angle-right orange-color left-space"></i>
-					</div>
+					<a href="#" class="">
+						<div class="dark-grey-box white-text text-right">
+							DISCOVER THE 2019 JEEP® CHEROKEE <i class="fas fa-angle-right orange-color left-space right-space"></i>
+						</div>
+					</a>
 				</a>
 			
 			</div>
+		</div>
+		<div class="super-light-grey-box">
+			<div class="container">
+				<div class="card super-light-grey-box">
+					<div class="card-body">
+						<div class="black-text font-weight-bold font-12px" >MAKE THEM LOOK TWICE<br> WITH THE JEEP® GRAPHICS STUDIO</div>
+						<a href="#">
+							<div class="orange-box black-text font-weight-bold" style="font-size: 14px; padding: 14px 42px 12px 25px;">
+									START CUMSTOMIZING NOW <i class="fas fa-angle-right left-space right-space"></i>
+							</div>
+						</a>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</body>
 	</html>
