kbb section content is complete

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
@@ -86,11 +87,13 @@
 				</div>
 				<div class="carousel-item slide-two">
 					<img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
-				</div><div class="carousel-item">
-					<img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
-				</div><div class="carousel-item">
-					<img class="d-block w-100" src="fourth-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Fourth slide">
 				</div>
+				<!-- <div class="carousel-item">
+					<img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
+				</div>
+				<div class="carousel-item">
+					<img class="d-block w-100" src="fourth-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Fourth slide">
+				</div> -->
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -202,11 +205,9 @@
 						<h6>Now get no monthly payments for 90 days plus an additional $500 bonus cash in addition to qualifying offers.
 						</h6>
 					</div>
-					<a href="#" class="">
 						<div class="dark-grey-box white-text text-right">
 							DISCOVER THE 2019 JEEP® CHEROKEE <i class="fas fa-angle-right orange-color left-space right-space"></i>
 						</div>
-					</a>
 				</a>
 			
 			</div>
@@ -215,16 +216,40 @@
 			<div class="container">
 				<div class="card super-light-grey-box">
 					<div class="card-body">
-						<div class="black-text font-weight-bold font-12px" >MAKE THEM LOOK TWICE<br> WITH THE JEEP® GRAPHICS STUDIO</div>
-						<a href="#">
-							<div class="orange-box black-text font-weight-bold" style="font-size: 14px; padding: 14px 42px 12px 25px;">
-									START CUMSTOMIZING NOW <i class="fas fa-angle-right left-space right-space"></i>
-							</div>
-						</a>
+						<div class="black-text font-weight-bold font-12px" style="margin-bottom: 8px;">MAKE THEM LOOK TWICE<br> WITH THE JEEP® GRAPHICS STUDIO</div>
+						<button type="button" class="btn orange-box text-center font-weight-bold" style="flex:1; font-size: 14px; border-radius: 2px;">
+								START CUSTOMIZING NOW <i class="fas fa-angle-right right-space"></i>
+							</button>
 					</div>
 				</div>
 			</div>
 
+		</div>
+		<div class="container-fluid d-flex flex-wrap light-grey-box text-center">
+			<div class="card light-grey-box d-flex">
+					<img class="card-img-top" src="kbb.300.png" alt="Kelly Blue Book">
+					<h3 class="card-title">
+						SEE YOUR VEHICLE'S TRADE-IN VALUE
+					</h3>
+					<div class="card-body"> 
+						Find out how much your current vehicle is worth from the independent Kelley Blue Book (KBB). KBB bases their values based on actual transactions and adjusts them as market conditions change.
+					</div>
+				</div>
+				<button type="button" class="btn orange-box text-center font-weight-bold" style="flex:1;">
+					CHECK YOUR TRADE-IN VALUE
+				</button>
+		</div>
+		<div>
+			<div class="input-group md-form form-sm form-1 pl-0">
+				<div class="input-group-prepend">
+					<span class="input-group-text" id="basic-text1"><i class="fas fa-search text-white"
+							aria-hidden="true"></i></span>
+				</div>
+				<input class="form-control my-0 py-1" type="text" placeholder="Search" aria-label="Search">
+				<button type="button" class="btn orange-box text-center font-weight-bold" style="border-radius:0;">
+						SEARCH
+					</button>
+			</div>
 		</div>
 	</body>
 	</html>
