added all content for footer

--- a/index.html
+++ b/index.html
@@ -225,30 +225,58 @@
 			</div>
 
 		</div>
-		<div class="container-fluid d-flex flex-wrap light-grey-box text-center">
-			<div class="card light-grey-box d-flex">
-					<img class="card-img-top" src="kbb.300.png" alt="Kelly Blue Book">
-					<h3 class="card-title">
-						SEE YOUR VEHICLE'S TRADE-IN VALUE
-					</h3>
-					<div class="card-body"> 
-						Find out how much your current vehicle is worth from the independent Kelley Blue Book (KBB). KBB bases their values based on actual transactions and adjusts them as market conditions change.
-					</div>
+		<div class="card light-grey-box flex-fill">
+			<div class="text-center">
+				<img src="kbb.150.png" alt="Kelly Blue Book" class="text-center">
+				<h3 class="card-title">
+					SEE YOUR VEHICLE'S TRADE-IN VALUE
+				</h3>
+				<div class="card-body"> 
+					Find out how much your current vehicle is worth from the independent Kelley Blue Book (KBB). KBB bases their values based on actual transactions and adjusts them as market conditions change.
 				</div>
-				<button type="button" class="btn orange-box text-center font-weight-bold" style="flex:1;">
-					CHECK YOUR TRADE-IN VALUE
-				</button>
+			
+			<button type="button" class="btn orange-box text-center font-weight-bold" style="flex:1;">
+				CHECK YOUR TRADE-IN VALUE
+			</button>
+			</div>
 		</div>
-		<div>
-			<div class="input-group md-form form-sm form-1 pl-0">
-				<div class="input-group-prepend">
-					<span class="input-group-text" id="basic-text1"><i class="fas fa-search text-white"
-							aria-hidden="true"></i></span>
+		<div class="container-fluid dark-grey-box">
+			<div class="row text-left">
+				<div class="col-6 col-sm-4">
+					<a href="h"><img src="handicap.png" /></a>
 				</div>
-				<input class="form-control my-0 py-1" type="text" placeholder="Search" aria-label="Search">
-				<button type="button" class="btn orange-box text-center font-weight-bold" style="border-radius:0;">
-						SEARCH
+				<div class="col-6 col-sm-4">
+						<a href="h" class="footer-links">
+							<i class="fas fa-globe-americas"></i>Find Your Country
+						</a>
+				</div>
+				<div class="col-6 col-sm-4">
+						<a href="h" class="footer-links">
+							Contact Us
+						</a>
+				</div>
+				<div class="col-6 col-sm-4">
+						<a href="h" class="footer-links">
+							Site Map
+						</a>
+				</div><div class="col-6 col-sm-4">
+						<a href="h" class="footer-links">
+							Careers
+						</a>
+				</div><div class="col-6 col-sm-4">
+						<a href="h" class="footer-links">
+							Espa&ntilde;ol
+						</a>
+				</div>
+				<div class="input-group md-form form-sm form-1 pl-0">
+					<div class="input-group-prepend">
+						<span class="input-group-text" id="basic-text1"><i class="fas fa-search" aria-hidden="true" style="background-color:white;"></i></span>
+					</div>
+					<input class="form-control my-0 py-1" type="text" placeholder="Search" aria-label="Search">
+					<button type="button" class="btn orange-box text-center font-weight-bold" style="border-radius:0;">
+							SEARCH
 					</button>
+				</div>
 			</div>
 		</div>
 	</body>
