added accordian links below footer

--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
 			      </li>
 			      <li class="nav-item">
 			        <a class="nav-link disabled" href="#">SHOPPING TOOLS<i class="fas fa-angle-right left-space orange-color"></i></a>
-			      </li><li class="nav-item">
+						</li>
+						<li class="nav-item">
 			        <a class="nav-link disabled" href="#">CAPABILITY<i class="fas fa-angle-right left-space orange-color"></i></a>
-			      </li><li class="nav-item">
+						</li>
+						<li class="nav-item">
 			        <a class="nav-link disabled" href="#">JEEP LIFE<i class="fas fa-angle-right orange-color"></i></a>
-			      </li><li class="nav-item">
+						</li>
+						<li class="nav-item">
 			        <a class="nav-link disabled" href="#">OWNERS<i class="fas fa-angle-right left-space orange-color"></i></a>
-			      </li><li class="nav-item">
+						</li>
+						<li class="nav-item">
 			        <a class="nav-link disabled" href="#">MERCHANDISE<i class="fas fa-angle-right left-space orange-color"></i></a>
 			      </li>
 			    </ul>
@@ -278,6 +282,70 @@
 					</button>
 				</div>
 			</div>
+		</div>
+		<div id="accordion">
+				<div class="card black-background radius-0">
+					<div class="card-header" id="headingOne">
+						<h5 class="mb-0">
+							<button class="btn btn-link collapsed white-text" data-toggle="collapse" data-target="#collapseOne"  aria-controls="collapseOne">
+								VEHICLES
+							</button>
+						</h5>
+					</div>
+					<div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+						<div class="card-body col-12 container">
+							<ul class="list-unstyled row blac">
+								<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Wrangler</a></li>
+								<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Cherokee</a></li>
+								<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Compass</a></li>
+								<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Grand Cherokee</a></li>
+								<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Renegade</a></li>
+								<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Gladiator</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="card black-background radius-0">
+					<div class="card-header" id="headingTwo">
+						<h5 class="mb-0">
+							<button class="btn btn-link collapsed white-text" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+								COST
+							</button>
+						</h5>
+					</div>
+					<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+							<div class="card-body col-12 container">
+									<ul class="list-unstyled row blac">
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">View Incentives & Offers</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Calculate Payment</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Apply for Credit</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">National Incentives</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Get a Quote</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Get Prequalified</a></li>
+									</ul>
+								</div>
+					</div>
+				</div>
+				<div class="card black-background radius-0">
+					<div class="card-header" id="headingThree">
+						<h5 class="mb-0">
+							<button class="btn btn-link collapsed white-text" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+								RESEARCH
+							</button>
+						</h5>
+					</div>
+					<div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+							<div class="card-body col-12 container">
+									<ul class="list-unstyled row blac">
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Adventure Reality</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Compare Models</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Sign Up for Updates</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Build & Price</a></li>
+										<li class="list-group-item col-6 black-background"><a href='#' class="grey-text">Get a Brochure</a></li>
+									</ul>
+								</div>
+					</div>
+				</div>
 		</div>
 	</body>
 	</html>
