--- a/index.html
+++ b/index.html
@@ -87,10 +87,23 @@
 		</nav>
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<div class="carousel-inner" role="listbox">
-				<div class="carousel-item active slide-one">
+				<div class="carousel-item active">
+						<img class="d-block w-100" src="first-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="First slide" />
+						<div class="absolute">
+							<div class="carousel-content">
+								<p>testing for text overlay</p>
+							</div>
+						</div>	
 				</div>
-				<div class="carousel-item slide-two">
-					<img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide">
+				<div class="carousel-item">
+						<img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide" />
+						<div class="absolute">
+							<div class="carousel-content">
+								<img src="motortrend.small.png" />
+								<p class="white-text">Now get the award-winning All-NEW 2019 Jeep® Wrangler 4-DOOR Sport for $269/month for 48 months</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<!-- <div class="carousel-item">
 					<img class="d-block w-100" src="third-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Third slide">
@@ -108,7 +121,7 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
-		<div class="container-fluid">
+		<div class="container-fluid" style="margin-top: 40px;">
 			<div class="row">
 				<div class="col-12 text-center">
 					<h6><b>JEEP® VEHICLES</b></h6>
@@ -347,5 +360,6 @@
 					</div>
 				</div>
 		</div>
+
 	</body>
 	</html>
