fixed text position with mtortrend image for xs view

--- a/index.html
+++ b/index.html
@@ -97,10 +97,15 @@
 				</div>
 				<div class="carousel-item">
 						<img class="d-block w-100" src="second-slide-mobile.jpg" data-src="holder.js/900x400?theme=industrial" alt="Second slide" />
-						<div class="absolute">
+						<div class="absolute-image">
 							<div class="carousel-content">
 								<img src="motortrend.small.png" />
-								<p class="white-text">Now get the award-winning All-NEW 2019 Jeep® Wrangler 4-DOOR Sport for $269/month for 48 months</p>
+							</div>
+						</div>
+						<div class="absolute-text text-center">
+								<p class="white-text" style="margin-bottom: 0px;"><b>Now get the award-winning All-NEW 2019 Jeep® Wrangler 4-DOOR Sport for $269/month for 48 months</b></p>
+								<p class="white-text" style="font-size: 10px;"><b>$3,695 Due at lease signing. No security deposit required.</b></p>
+								<a href="#" class="orange-box black-text" style="padding: 14px 25px;">VIEW THE 2019 WRANGLER <i class="fas fa-angle-up"></i> </a>
 							</div>
 						</div>
 					</div>
