fixed spacing and sizing in trade in section

--- a/index.html
+++ b/index.html
@@ -247,63 +247,62 @@
 			</div>
 
 		</div>
-		<div class="card light-grey-box flex-fill">
-			<div class="text-center">
-				<img src="kbb.150.png" alt="Kelly Blue Book" class="text-center">
-				<h3 class="card-title">
-					SEE YOUR VEHICLE'S TRADE-IN VALUE
-				</h3>
-				<div class="card-body"> 
-					Find out how much your current vehicle is worth from the independent Kelley Blue Book (KBB). KBB bases their values based on actual transactions and adjusts them as market conditions change.
+		<div class="container-fluid d-flex light-grey-box p-4">
+			<div class="row d-flex justify-content-center">
+				<div class="col-lg-2 col-md-2 col-12 text-center">
+					<img src="kbb.150.png" alt="Kelly Blue Book" style="text-center" />
 				</div>
+				<div class="col-lg-6 col-md-8 col-10 text-left text-sm-center">
+					<h3 class="font-weight-bold text-center" style="font-size:26px;">SEE YOUR VEHICLE'S TRADE-IN VALUE</h3>
+					<p class="m-1 font-14px">Find out how much your current vehicle is worth from the independent Kelley Blue Book (KBB). KBB bases their values based on actual transactions and adjusts them as market conditions change.</p>
 			
-			<button type="button" class="btn orange-box text-center font-weight-bold" style="flex:1;">
-				CHECK YOUR TRADE-IN VALUE
-			</button>
+					<button type="button" class="btn my-3 font-14px col-12 col-sm-7 px-4 py-2 orange-box text-center font-weight-bold btn-warning">
+						CHECK YOUR TRADE-IN VALUE <i class="fas fa-angle-right right-space"></i>
+					</button>
+				</div>
 			</div>
 		</div>
 		<div class="container-fluid dark-grey-box pb-3 pt-5 px-5">
 			<div class="row text-center">
-					<div class="row col-12 col-lg-8 font-14px">
-						<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
-							<a href="h"><img src="handicap.png" /></a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
-								<a href="h" class="footer-links">
-									<i class="fas fa-globe-americas"></i>Find Your Country
-								</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
-								<a href="h" class="footer-links">
-									Contact Us
-								</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
-								<a href="h" class="footer-links">
-									Site Map
-								</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
-								<a href="h" class="footer-links">
-									Careers
-								</a>
-						</div>
-						<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
-								<a href="h" class="footer-links">
-									Espa&ntilde;ol
-								</a>
-						</div>
+				<div class="row col-12 col-lg-8 font-14px">
+					<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
+						<a href="h"><img src="handicap.png" /></a>
 					</div>
-					<div class="m-0 col-10 col-s-3 col-md-6 col-lg-4 pl-0">
-						<div class="input-group md-form form-sm form-1 pl-0 m-3">
-							<div class="input-group-prepend">
-								<span class="input-group-text" id="basic-text1"><i class="fas fa-search" aria-hidden="true" style="background-color:white;"></i></span>
-							</div>
-							<input class="form-control my-0 py-1" type="text" aria-label="Search">
-							<button type="button" class="btn orange-box text-center font-weight-bold font-12px" style="border-radius: 1px; padding: 8px 15px;">
-									SEARCH
-							</button>
+					<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
+							<a href="h" class="footer-links">
+								<i class="fas fa-globe-americas"></i>Find Your Country
+							</a>
+					</div>
+					<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
+							<a href="h" class="footer-links">
+								Contact Us
+							</a>
+					</div>
+					<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
+							<a href="h" class="footer-links">
+								Site Map
+							</a>
+					</div>
+					<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
+							<a href="h" class="footer-links">
+								Careers
+							</a>
+					</div>
+					<div class="col-6 col-sm-4 col-lg-auto mx-lg-2">
+							<a href="h" class="footer-links">
+								Espa&ntilde;ol
+							</a>
+					</div>
+				</div>
+				<div class="m-0 col-10 col-s-3 col-md-6 col-lg-4 pl-0">
+					<div class="input-group md-form form-sm form-1 pl-0 m-3">
+						<div class="input-group-prepend">
+							<span class="input-group-text" id="basic-text1"><i class="fas fa-search" aria-hidden="true" style="background-color:white;"></i></span>
 						</div>
+						<input class="form-control my-0 py-1" type="text" aria-label="Search">
+						<button type="button" class="btn orange-box text-center font-weight-bold font-12px" style="border-radius: 1px; padding: 8px 15px;">
+								SEARCH
+						</button>
 					</div>
 				</div>
 			</div>
