add jeep image and fixed spacing and sizing for the customize box

--- a/index.html
+++ b/index.html
@@ -234,18 +234,19 @@
 			
 			</div>
 		</div>
-		<div class="super-light-grey-box">
-			<div class="container">
-				<div class="card super-light-grey-box">
-					<div class="card-body">
-						<div class="black-text font-weight-bold font-12px" style="margin-bottom: 8px;">MAKE THEM LOOK TWICE<br> WITH THE JEEP® GRAPHICS STUDIO</div>
-						<button type="button" class="btn orange-box text-center font-weight-bold" style="flex:1; font-size: 14px; border-radius: 2px;">
-								START CUSTOMIZING NOW <i class="fas fa-angle-right right-space"></i>
-							</button>
-					</div>
+		<div class="super-light-grey-box container-fluid px-5 py-5">
+			<div class="row">
+				<div class="col-lg-7">
+					<h4 class="black-text font-weight-bold mx-2 mt-5" style="margin-bottom: 8px;">
+						MAKE THEM LOOK TWICE<br> WITH THE JEEP<sub>®</sub> GRAPHICS STUDIO</h4>
+					<button type="button" class="btn orange-box text-center font-weight-bold" style="flex:1; font-size: 14px; border-radius: 2px;">
+						START CUSTOMIZING NOW <i class="fas fa-angle-right right-space"></i>
+					</button>
+				</div>
+				<div class="col-lg-5 d-none d-lg-block text-center">
+					<img src="jeep-customize.png" />
 				</div>
 			</div>
-
 		</div>
 		<div class="container-fluid d-flex light-grey-box p-4">
 			<div class="row d-flex justify-content-center">
